bk_ida/gccida/c3/set_nonzero_bits_and_sign_copies
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_nonzero_bits_and_sign_copies/src/combine.c:1323:7: error: expected expression
if (  struct set && ( unsigned __int16)*( _DWORD *)set != 49 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_nonzero_bits_and_sign_copies/src/combine.c:1333:49: error: use of undeclared identifier 'machine_mode'
num = num_sign_bit_copies( *( rtx *)&seta[1], ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_nonzero_bits_and_sign_copies/src/combine.c:1333:64: error: expected expression
num = num_sign_bit_copies( *( rtx *)&seta[1], ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_nonzero_bits_and_sign_copies/src/obj/combine.o] Error 1
